refactor: reorganize packages and lowercase the root namespace